syntax = "proto3";
package dymensionxyz.dymension.dymns;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/dymns/types";

// Params defines the parameters for the module.
message Params {
  // price defines setting for pricing of Dym-Name and price-related parameters.
  PriceParams price = 1 [
    (gogoproto.moretags) = "yaml:\"price\"",
    (gogoproto.nullable) = false
  ];

  // chains defines setting for prioritized aliases mapping.
  ChainsParams chains = 2 [
    (gogoproto.moretags) = "yaml:\"chains\"",
    (gogoproto.nullable) = false
  ];

  // misc is group of miscellaneous parameters.
  MiscParams misc = 3 [
    (gogoproto.moretags) = "yaml:\"misc\"",
    (gogoproto.nullable) = false
  ];
}

// PriceParams defines the pricing of Dym-Name and price-related parameters.
message PriceParams {
  // name_price_steps holds the price steps configuration for Dym-Name registration, apply to the first year.
  // The price of Dym-Name is calculated based on the number of letters.
  // The first element is the price of 1 letter Dym-Name, the last element is the price of N+ letters Dym-Name.
  // Minimum steps count allowed is 4, for 1/2/3/4+ letters Dym-Name.
  repeated string name_price_steps = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"name_price_steps\"",
    (gogoproto.nullable) = false
  ];


  // alias_price_steps holds the price steps configuration for Alias registration, one off payment.
  // The price of Alias is calculated based on the number of letters.
  // The first element is the price of 1 letter Alias, the last element is the price of N+ letters Alias.
  // Minimum steps count allowed is 4, for 1/2/3/4+ letters Alias.
  repeated string alias_price_steps = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"alias_price_steps\"",
    (gogoproto.nullable) = false
  ];

  // price_extends is used to extends Dym-Name yearly, after the one-off payment for the first year.
  string price_extends = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"price_extends\"",
    (gogoproto.nullable) = false
  ];

  // price_denom is the required denomination of the pricing setup and trading policy.
  string price_denom = 4 [
    (gogoproto.moretags) = "yaml:\"price_denom\""
  ];

  // min_offer_price is minimum price allowed to place an offer.
  // Mostly used to prevent spamming and abusing store with low price offers,
  // so the value should not be so low.
  string min_offer_price = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"min_offer_price\"",
    (gogoproto.nullable) = false
  ];
}

// ChainsParams defines setting for prioritized aliases mapping.
message ChainsParams {
  // aliases_of_chain_ids is set of chain-ids and their corresponding aliases,
  // used for UX improvement like we can do my-name@cosmos instead of my-name@cosmoshub-4.
  //
  // This list is prioritized over Roll-App aliases
  // the reason is to allow the community able to have control to fixes the potential problems with the aliases.
  repeated AliasesOfChainId aliases_of_chain_ids = 1 [
    (gogoproto.moretags) = "yaml:\"aliases_of_chain_ids\"",
    (gogoproto.nullable) = false
  ];
}

// AliasesOfChainId defines the multiple-aliases of a chain id.
message AliasesOfChainId {
  // chain_id which owned the aliases.
  string chain_id = 1 [
    (gogoproto.moretags) = "yaml:\"chain_id\""
  ];

  // aliases is a set of aliases of the chain id for UX improvement,
  // like we can do my-name@cosmos instead of my-name@cosmoshub-4
  repeated string aliases = 2 [
    (gogoproto.moretags) = "yaml:\"aliases\""
  ];
}

// MiscParams defines group of miscellaneous parameters.
message MiscParams {
  // end_epoch_hook_identifier is the identifier of the end epoch hook.
  string end_epoch_hook_identifier = 1 [
    (gogoproto.moretags) = "yaml:\"end_epoch_hook_identifier\""
  ];

  // grace_period_duration is the amount of time that the former owner of an expired Dym-Name
  // can renew it before completely lost.
  google.protobuf.Duration grace_period_duration = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags) = "yaml:\"grace_period_duration\""
  ];

  // sell_order_duration is the amount of time of a Sell-Order from created to expired.
  google.protobuf.Duration sell_order_duration = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags) = "yaml:\"sell_order_duration\""
  ];

  // enable_trading_name is the flag to enable trading of Dym-Name.
  // To be used to stop trading of Dym-Name when needed.
  bool enable_trading_name = 4;

  // enable_trading_alias is the flag to enable trading of Alias.
  // To be used in the future when Alias trading implementation is ready
  // or disable trading of Alias when needed.
  bool enable_trading_alias = 5;
}
